[tool.poetry]
name = "contact chatbot"
version = "0.1.0"
description = "Chatbot for ContactApp"
authors = ["ychamel <ychamel@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
streamlit = "^1.25.0"
langchain = "^0.0.254"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
